# gspc-gromovwitten

./: .gitignore  .singularhistory  CMakeLists (Kopie).txt  CMakeLists.txt  README.md  config.json  deseria_seria.sh  error.txt  error1.txt  error2.txt  feynman copy.xpnet  feynman.xpnet  feynmans.xpnet  generate_fey  gpi.sh  gpispace_output.txt  install  install copy.sh  install.sh  install_all.sh  install_feyn.sh  monitor  monitor.txt  new_path.sh  path.sh  qfqsr  run copy.sh  run.sh  run_feynman.sh  screen  setup.sh  token_read.sh  try.sh
Singular_Library/: LEADSYZ_Kernel.CPP  LIFT_Kernel.CPP
atransition_function/: Combination_vector.cpp  Sum_degree  Sum_degree.cpp  feyn  feyn.cpp  stringtotuple  stringtotuple.cpp
bine/libexec/bundle/lib/: libboost_chrono.so.1.63.0  libboost_date_time.so.1.63.0  libboost_filesystem.so.1.63.0  libboost_timer.so.1.63.0  libboost_unit_test_framework.so.1.63.0  libssl.so.3
bine/pnet/: feynman.pnet
build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  template.pnet
build_dir/gen_template.pnet/: Makefile  Makefile.CXXFLAGS  Makefile.LDFLAGS
build_dir/gen_template.pnet/pnetc/op/: singular_template.cpp  singular_template.cpp~
build_dir/gen_template.pnet/pnetc/op/singular_template/: Quasi.cpp  Quasi.cpp~  Quasi.d  Quasi.hpp  compute.cpp  compute.cpp~  compute.d  compute.hpp  compute.hpp~  compute1.cpp  compute1.cpp~  compute1.d  compute1.hpp  compute1.hpp~  compute11.cpp  compute11.cpp~  compute11.d  compute11.hpp  compute11.hpp~  control1.cpp  control1.cpp~  control1.d  control1.hpp  degrees_fey.cpp  degrees_fey.d  degrees_fey.hpp  feynman_integral_degree.cpp  feynman_integral_degree.d  feynman_integral_degree.hpp  final.cpp  final.d  (+12 more)
build_dir/src/: Makefile  cmake_install.cmake  installation.hpp
build_dir/template/: Makefile  cmake_install.cmake  config.hpp
build_dir/workflow/: Makefile  cmake_install.cmake
cpp/: Quasi  Quasi.cpp  Quasi_psi  Quasi_psi.cpp  binomial  binomial.cpp  extract  extract.cpp  extract_input  extract_input.cpp  feynman.xpnet  feynman_psi  feynman_psi.cpp  feynman_timing  feynman_timing.cpp  file.cpp  generate.cpp  generate_fey  generate_fey copy.cpp  generate_fey.cpp  generated_feynman.xpnet  here  here.cpp  qua.jl  results.txt  stringfmpq  stringfmpq.cpp  sum_c  sum_c.cpp  sum_of_vectors  sum_of_vectors.cpp  tempCodeRunnerFile.cpp  try  try.cpp  try.h  updated_vector  updated_vector.cpp
example_dir/: .singularhistory  Smatrix.ssi  example.sing  input  newSingular.sh  nodefile  run.sh  tempLeadsyz.ssi  tempbonsoir.ssi  templategp.lib  templategspc copy.lib  templategspc.lib  timer
example_dir/temp/: input  waas_283381_1731580926042782230
feyman/: a.out  cartesian.cpp  copy  copy.cpp  ess  ess.cpp  feynman.cpp  feynman.hpp  funct  funct.cpp  my_main  my_main.cpp  permut.cpp  propagator.cpp  state  state.cpp  term.cpp  vector_to_string.cpp
feynman/: composition  composition.cpp  copy  feynman  feynman.hpp  funct.cpp  functi  main  my_main.cpp  prop  propa  sgn  state.cpp  try_pnet  vector_to_string.cpp
flint_try/: Iterate_mod  Iterate_mod.cpp  c_code  c_code.cpp  degree  degree.cpp  double_edges  double_edges.cpp  fey  fey.cpp  fey_degree  fey_degree.cpp  feyman_degree  feyman_degree.cpp  feynman_timing  feynman_timing.cpp  gen_block.cpp  iterate  iterate.cpp  iterate_comp.txtcd  iterate_double  iterate_double.cpp  iterate_mod  iterate_mod.cpp  pnet  pnet.cpp  time_memory.hpp  try_pnet  try_pnet.cpp  with_sign  with_sign.cpp
include/feynman/: Parameters.hpp  Quasi.hpp  ValuesOnPorts.hpp  Workflow.hpp  WorkflowResult.hpp  Workflow_quasi_psi.hpp  execute.hpp  feynman.hpp  feynman_quasi.hpp  parse_parameters_from_commandline.hpp
install_dir/libexec/workflow/: template.pnet
install_dir/share/examples/: oneSublift_kernel.cpp  templategp.lib
julia/: double_edges.jl  feynman.jl  graph.jl
src/: Quasi.cpp  ValuesOnPorts.cpp  Workflow.cpp  WorkflowResult.cpp  Workflow_base.cpp  Workflow_quasi.cpp  Workflow_quasi_psi.cpp  Workflow_sum.cpp  execute copy.cpp  execute.cpp  fey.cpp  feynman  feynman.cpp  feynman_composition.cpp  feynman_double_edges.cpp  feynman_quasi.cpp  feynman_quasi_psi.cpp  feynman_sum.cpp  feynman_sum_psi.cpp  feynmane.cpp  generate  generate copy.cpp  generate.cpp  implementation.cpp  main.cpp  my_main.cpp  my_program  parse_parameters_from_commandline.cpp  parti.hpp  partition.cpp  partition2  partition2.cpp  permut.cpp  print.hpp  state.cpp  tempCodeRunnerFile
src/state/: a.out  state  state.cpp
template/: CMakeLists.txt
template/cmake/modules/: FindSingular.cmake
template/interface/: Workflow.hpp  feynman.hpp  template_interface.hpp
template/src/: CMakeLists.txt  installation.cpp
template/template/: CMakeLists.txt  config.hpp.in  feynman.cpp  implementation.cpp  implementation_copy.cpp  singular_functions copy.cpp  singular_functions.cpp  singular_functions.hpp
template/template/LIB/: templategspc.lib
template/workflow/: CMakeLists.txt  template.xpnet
try/: a.out  ess.cpp  feynman.xpnet  new_version  partition2.cpp  permut.cpp  print.cpp  propagator.cpp
try/transitions/: debug_sign  debug_sign.cpp  ess  ess.cpp  estr  estr.cpp  feynman  feynman.cpp  filp_signature  filp_signature.cpp  gen_combination  gen_combination.cpp  sum_degree.cpp  tempCodeRunnerFile.cpp
workflow/: feyn.xml  feyn.xpnet  feynman copy 2.xpnet  feynman copy 3.xpnet  feynman copy.xpnet  feynman ohne quasi.xpnet  feynman.xpnet  feynman2.xpnet  feynman_control1.xpnet  feynman_doubles_edges.xpnet  feynman_quasi.xpnet  feynman_string.xpnet  feynman_struct_init.xpnet  feynman_struct_string.xpnet  feynman_sum.xpnet  feynman_sum_psi.xpnet  feynman_with_quasi.xpnet  feynman_with_rhs copy.xpnet  feynman_with_rhs.xpnet  feynmanaa.xpnet  one_by_one.xml
workflow/petri/: feynmana.xpnet  sum_random.xpnet
workflow/xpnet/: No_reduce_with_sign.xpnet  feynman copy 3.xpnet  feynman copy.xpnet  feynman.xpnet  temp.xpnet  vector.xpnet
xpnet/: emojis  iterate_permutation  iterate_permutation.cpp  tempCodeRunnerFile  try  try.cpp
xpnet_problems/: xpnet_problem  xpnet_problem.cpp
